--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,6 +1,11 @@
+PORT=8080
+
 DB_HOST=localhost
 DB_PORT=5434
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=postgres
-OPENAI_API_KEY=openaikey
+
+FE_URL=http://localhost:3000
+
+OPENAI_API_KEY=
