--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   dev-postgres:
     image: postgres:15.4-alpine
     ports:
-      - ${DB_PORT}:5432
+      - 5434:5432
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     restart: always
     networks:
       - bot-or-not
