--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,6 @@
-PORT=8080
-
 DB_HOST=localhost
 DB_PORT=5434
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=postgres
-
-FE_URL=http://localhost:3000
-
-OPENAI_API_KEY=
+OPENAI_API_KEY=openaikey
